; ModuleID = '/home/carl/AnghaBench/mruby/mrbgems/mruby-string-ext/src/extr_string.c_mrb_str_swapcase_bang.c'
source_filename = "/home/carl/AnghaBench/mruby/mrbgems/mruby-string-ext/src/extr_string.c_mrb_str_swapcase_bang.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.RString = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @mrb_str_swapcase_bang to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mrb_str_swapcase_bang(i32* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.RString*, align 8
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 0, i32* %8, align 4
  %10 = load i32, i32* %5, align 4
  %11 = call %struct.RString* @mrb_str_ptr(i32 %10)
  store %struct.RString* %11, %struct.RString** %9, align 8
  %12 = load i32*, i32** %4, align 8
  %13 = load %struct.RString*, %struct.RString** %9, align 8
  %14 = call i32 @mrb_str_modify(i32* %12, %struct.RString* %13)
  %15 = load i32, i32* %5, align 4
  %16 = call i8* @RSTRING_PTR(i32 %15)
  store i8* %16, i8** %6, align 8
  %17 = load i8*, i8** %6, align 8
  %18 = load i32, i32* %5, align 4
  %19 = call i32 @RSTRING_LEN(i32 %18)
  %20 = sext i32 %19 to i64
  %21 = getelementptr inbounds i8, i8* %17, i64 %20
  store i8* %21, i8** %7, align 8
  br label %22

22:                                               ; preds = %47, %2
  %23 = load i8*, i8** %6, align 8
  %24 = load i8*, i8** %7, align 8
  %25 = icmp ult i8* %23, %24
  br i1 %25, label %26, label %50

26:                                               ; preds = %22
  %27 = load i8*, i8** %6, align 8
  %28 = load i8, i8* %27, align 1
  %29 = call i64 @ISUPPER(i8 signext %28)
  %30 = icmp ne i64 %29, 0
  br i1 %30, label %31, label %36

31:                                               ; preds = %26
  %32 = load i8*, i8** %6, align 8
  %33 = load i8, i8* %32, align 1
  %34 = call signext i8 @TOLOWER(i8 signext %33)
  %35 = load i8*, i8** %6, align 8
  store i8 %34, i8* %35, align 1
  store i32 1, i32* %8, align 4
  br label %47

36:                                               ; preds = %26
  %37 = load i8*, i8** %6, align 8
  %38 = load i8, i8* %37, align 1
  %39 = call i64 @ISLOWER(i8 signext %38)
  %40 = icmp ne i64 %39, 0
  br i1 %40, label %41, label %46

41:                                               ; preds = %36
  %42 = load i8*, i8** %6, align 8
  %43 = load i8, i8* %42, align 1
  %44 = call signext i8 @TOUPPER(i8 signext %43)
  %45 = load i8*, i8** %6, align 8
  store i8 %44, i8* %45, align 1
  store i32 1, i32* %8, align 4
  br label %46

46:                                               ; preds = %41, %36
  br label %47

47:                                               ; preds = %46, %31
  %48 = load i8*, i8** %6, align 8
  %49 = getelementptr inbounds i8, i8* %48, i32 1
  store i8* %49, i8** %6, align 8
  br label %22

50:                                               ; preds = %22
  %51 = load i32, i32* %8, align 4
  %52 = icmp ne i32 %51, 0
  br i1 %52, label %53, label %55

53:                                               ; preds = %50
  %54 = load i32, i32* %5, align 4
  store i32 %54, i32* %3, align 4
  br label %57

55:                                               ; preds = %50
  %56 = call i32 (...) @mrb_nil_value()
  store i32 %56, i32* %3, align 4
  br label %57

57:                                               ; preds = %55, %53
  %58 = load i32, i32* %3, align 4
  ret i32 %58
}

declare dso_local %struct.RString* @mrb_str_ptr(i32) #1

declare dso_local i32 @mrb_str_modify(i32*, %struct.RString*) #1

declare dso_local i8* @RSTRING_PTR(i32) #1

declare dso_local i32 @RSTRING_LEN(i32) #1

declare dso_local i64 @ISUPPER(i8 signext) #1

declare dso_local signext i8 @TOLOWER(i8 signext) #1

declare dso_local i64 @ISLOWER(i8 signext) #1

declare dso_local signext i8 @TOUPPER(i8 signext) #1

declare dso_local i32 @mrb_nil_value(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
